# federated-rag-lab

./: .env.example  .gitignore  README.md  pyproject.toml
01-naive-rag/: README.md  ask.py  example-output.md  ingest.py
02-router/: README.md  ask.py  example-output.md  graph.py
03-federated/: README.md  ask.py  example-output.md  graph.py
04-eval/: README.md  dataset.jsonl  results.md  run_eval.py
common/: __init__.py  llm.py  loaders.py  sql.py
data/docs/: integrations.md  onboarding-guide.md  pricing-faq.md  product-overview.md  release-notes.md  security-summary.md  support-sla.md
scripts/: seed_structured.py
